--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
         </span>
         <ul class="main-nav" id="js-menu">
             <li>
-                <a href="home.html" class="nav-links">Home</a>
+                <a href="index.html" class="nav-links">Home</a>
             </li>
             <li>
                 <a href="gallery.html" class="nav-links">Gallery</a>
