--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 </h2>
 </div>
 
+<footer>*work under development...</footer>
+
 
 <script src="js/three.r119.min.js"></script>
 <script src="js/vanta.waves.min.js"></script>
